--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "url": "https://github.com/Anton0694/node-hw1/issues"
   },
   "homepage": "https://github.com/Anton0694/node-hw1#readme",
-  "type": "module",
   "devDependencies": {
     "nodemon": "^2.0.22"
   },
   "dependencies": {
-    "nanoid": "^3.3.4"
+    "nanoid": "^3.3.4",
+    "yargs": "^17.7.1"
   }
 }
